# atlas

./: .gitignore  CLI.md  READER.md  README.md  RUN.md  manifest.atsx.yaml  pyproject.toml  schema.md
atlas_parser/: __init__.py  __main__.py  cli.py  errors.py  graph.py  info.py  parser.py  schemas.py
reader/: index.html  package-lock.json  package.json
reader/src/: App.css  App.tsx  api.ts  types.ts
reader/src-tauri/: Cargo.toml  tauri.conf.json
reader/src-tauri/icons/: icon.icns
reader/src-tauri/src/: lib.rs  main.rs
reader/src/components/: ProgressRing.tsx  StatusBadge.tsx
reader/src/creator/: CreatorWizard.tsx  ReadOnlyPreview.tsx  api.ts  creator.css  manifestYaml.ts  previewStatus.ts  slug.ts  store.ts  types.ts
reader/src/creator/steps/: BranchesStep.tsx  MetaStep.tsx  ProcessStep.tsx  ResourcesStep.tsx  ReviewStep.tsx
reader/src/views/: ProcessView.tsx  ResourcesView.tsx  StateView.tsx
schemas/: state.schema.yaml
tests/: conftest.py  test_cli.py  test_graph.py  test_parser.py
