[project]
name = "atlas-parser"
version = "0.1.0"
description = "Parser/validator for ATLAS .atsx containers (manifest.atsx.yaml + state.atsx.yaml)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.18",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
atlas = "atlas_parser.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["atlas_parser"]

[tool.setuptools.package-data]
"atlas_parser" = []

[tool.pytest.ini_options]
testpaths = ["tests"]
